force-app/main/default/objects/SiebelActivity__x/SiebelActivity__x.object-meta.xml
<CustomObject>
    <description>SiebelActivity</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelActivity</externalName>
    <label>Attività Siebel</label>
    <pluralLabel>Attività Siebel</pluralLabel>
</CustomObject>