force-app/main/default/objects/SiebelActivity__x/fields/ATTRIB_32__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_32__c</fullName>
    <description>ATTRIB_32</description>
    <externalDeveloperName>ATTRIB_32</externalDeveloperName>
    <label>Data proposta</label>
    <type>DateTime</type>
</CustomField>