force-app/main/default/objects/SiebelActivity__x/fields/CALL_ID__c.field-meta.xml
<CustomField>
    <fullName>CALL_ID__c</fullName>
    <description>CALL_ID</description>
    <externalDeveloperName>CALL_ID</externalDeveloperName>
    <label>Connection ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>