force-app/main/default/objects/SiebelActivity__x/fields/EVT_STAT_CD__c.field-meta.xml
<CustomField>
    <fullName>EVT_STAT_CD__c</fullName>
    <description>EVT_STAT_CD</description>
    <externalDeveloperName>EVT_STAT_CD</externalDeveloperName>
    <label>Stato</label>
    <length>30</length>
    <type>Text</type>
</CustomField>