force-app/main/default/objects/SiebelActivity__x/fields/LAST_UPD_BY_TR__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPD_BY_TR__c</fullName>
    <description>LAST_UPD_BY_TR</description>
    <externalDeveloperName>LAST_UPD_BY_TR</externalDeveloperName>
    <label>Ultima modifica da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>