force-app/main/default/objects/SiebelActivity__x/fields/OWNER_LOGIN__c.field-meta.xml
<CustomField>
    <fullName>OWNER_LOGIN__c</fullName>
    <description>OWNER_LOGIN</description>
    <externalDeveloperName>OWNER_LOGIN</externalDeveloperName>
    <label>Assegnata A</label>
    <length>50</length>
    <type>Text</type>
</CustomField>