force-app/main/default/objects/SiebelActivity__x/fields/TODO_ACTL_START_DT__c.field-meta.xml
<CustomField>
    <fullName>TODO_ACTL_START_DT__c</fullName>
    <description>TODO_ACTL_START_DT</description>
    <externalDeveloperName>TODO_ACTL_START_DT</externalDeveloperName>
    <label>Data inizio Attività Lavorativa da fare</label>
    <type>Date</type>
</CustomField>