force-app/main/default/objects/SiebelActivity__x/fields/TODO_CD__c.field-meta.xml
<CustomField>
    <fullName>TODO_CD__c</fullName>
    <description>TODO_CD</description>
    <externalDeveloperName>TODO_CD</externalDeveloperName>
    <label>Tipo attività</label>
    <length>30</length>
    <type>Text</type>
</CustomField>