force-app/main/default/objects/SiebelActivity__x/fields/TODO_PLAN_END_DT__c.field-meta.xml
<CustomField>
    <fullName>TODO_PLAN_END_DT__c</fullName>
    <externalDeveloperName>TODO_PLAN_END_DT</externalDeveloperName>
    <label>Completamento pianificato</label>
    <type>DateTime</type>
</CustomField>