force-app/main/default/objects/SiebelActivity__x/fields/X_CANALE_CAMPAGNA__c.field-meta.xml
<CustomField>
    <fullName>X_CANALE_CAMPAGNA__c</fullName>
    <description>X_CANALE_CAMPAGNA</description>
    <externalDeveloperName>X_CANALE_CAMPAGNA</externalDeveloperName>
    <label>Canale Exec. Campagna</label>
    <length>30</length>
    <type>Text</type>
</CustomField>