force-app/main/default/objects/SiebelActivity__x/fields/X_CARICO__c.field-meta.xml
<CustomField>
    <fullName>X_CARICO__c</fullName>
    <description>X_CARICO</description>
    <externalDeveloperName>X_CARICO</externalDeveloperName>
    <label>App. in carico A</label>
    <length>30</length>
    <type>Text</type>
</CustomField>