force-app/main/default/objects/SiebelActivity__x/fields/X_DATA_DL__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_DL__c</fullName>
    <description>X_DATA_DL</description>
    <externalDeveloperName>X_DATA_DL</externalDeveloperName>
    <label>Data DL</label>
    <type>DateTime</type>
</CustomField>