force-app/main/default/objects/SiebelActivity__x/fields/X_DATA_PRIMO_SOLLECITO__c.field-meta.xml
<CustomField>
    <fullName>X_DATA_PRIMO_SOLLECITO__c</fullName>
    <description>X_DATA_PRIMO_SOLLECITO</description>
    <externalDeveloperName>X_DATA_PRIMO_SOLLECITO</externalDeveloperName>
    <label>Data primo sollecito cliente</label>
    <type>Date</type>
</CustomField>