force-app/main/default/objects/SiebelActivity__x/fields/X_FLAG_SOSPESO__c.field-meta.xml
<CustomField>
    <fullName>X_FLAG_SOSPESO__c</fullName>
    <description>X_FLAG_SOSPESO</description>
    <externalDeveloperName>X_FLAG_SOSPESO</externalDeveloperName>
    <label>Attività sospesa</label>
    <length>1</length>
    <type>Text</type>
</CustomField>