force-app/main/default/objects/SiebelActivity__x/fields/X_ID_SPORTELLO_QAD__c.field-meta.xml
<CustomField>
    <fullName>X_ID_SPORTELLO_QAD__c</fullName>
    <description>X_ID_SPORTELLO_QAD</description>
    <externalDeveloperName>X_ID_SPORTELLO_QAD</externalDeveloperName>
    <label>Id Sportello Qad</label>
    <length>30</length>
    <type>Text</type>
</CustomField>