force-app/main/default/objects/SiebelActivity__x/fields/X_LINK_4U__c.field-meta.xml
<CustomField>
    <fullName>X_LINK_4U__c</fullName>
    <description>X_LINK_4U</description>
    <externalDeveloperName>X_LINK_4U</externalDeveloperName>
    <label>Documentazione</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>