force-app/main/default/objects/SiebelActivity__x/fields/X_ORA_DL__c.field-meta.xml
<CustomField>
    <fullName>X_ORA_DL__c</fullName>
    <externalDeveloperName>X_ORA_DL</externalDeveloperName>
    <label>Ora DL da</label>
    <length>10</length>
    <type>Text</type>
</CustomField>