force-app/main/default/objects/SiebelActivity__x/fields/X_PRIMA_FASCIA_A__c.field-meta.xml
<CustomField>
    <fullName>X_PRIMA_FASCIA_A__c</fullName>
    <description>X_PRIMA_FASCIA_A</description>
    <externalDeveloperName>X_PRIMA_FASCIA_A</externalDeveloperName>
    <label>Ora proposta A</label>
    <length>10</length>
    <type>Text</type>
</CustomField>