force-app/main/default/objects/SiebelActivity__x/fields/X_VALORE_SOLLECITO__c.field-meta.xml
<CustomField>
    <fullName>X_VALORE_SOLLECITO__c</fullName>
    <description>X_VALORE_SOLLECITO</description>
    <externalDeveloperName>X_VALORE_SOLLECITO</externalDeveloperName>
    <label>Priorità sollecito cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>